# python-project-46

./: README.md  brain-even-demo.cast  pyproject.toml
tests/: test_brain_games.py
